compiled/incubator-1/networkpolicy_allow-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configmanagement.gke.io/cluster-name: defaultcluster
    configmanagement.gke.io/source-path: config/namespaces/network-policy-allow-all-egress.yaml
    configsync.gke.io/declared-fields: '{"f:spec":{"f:egress":{},"f:policyTypes":{}}}'
  labels:
    configsync.gke.io/declared-version: v1
  name: allow-all-egress
  namespace: incubator-1
spec:
  egress:
  - {}
  podSelector: {}
  policyTypes:
  - Egress
